EWD-22239 - CUD Learning Objective: Update fix flickering in Safari
Former-commit-id: 93095d66828482960b07f5c44ca5534502da10a1

--- a/sources/easygenerator.Web/Content/objective.css
+++ b/sources/easygenerator.Web/Content/objective.css
@@ -9,7 +9,6 @@
 
 .navbar {
     height: 57px;
-    display: inline-block;
     margin: 20px 0 0px;
 }
 
